Formatted CSS for new divs and map

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,20 +43,15 @@
 }
 
 .ui-menu-color-contact {
-    background-color: #3498db;
+    background-color: #000000;
 }
 
 .ui-menu-color-download {
-    background-color: #d9a81d;
-}
-
-
-.ui-menu-color-github {
-    background-color: #1c4a6c;
+    background-color: #000000;
 }
 
 .ui-menu-color-interests {
-    background-color: #e74c3c;
+    background-color: #000000;
 }
 
 
