--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,56 +7,70 @@
 }
 
 .bg-color-three-reasons {
-    background-color: #fff;
+    background-color: #ffffff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
 }
 
+.bg-color-skills {
+    background-color: #ffffff;
+}
+
 .bg-color-work-history {
-    background-color: #000000;
+    background-color: #9b59b6;
 }
 
 .bg-color-contact {
-    background-color: #fff;
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
-    background-color: #000000;
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
-    background-color: #000000;
+    background-color: #9b59b6;
 }
 
 .ui-menu-color-contact {
-    background-color: #000000;
+    background-color: #3498db;
 }
 
 .ui-menu-color-download {
-    background-color: #000000;
+    background-color: #d9a81d;
 }
 
-.row-table {
-    display: table;
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
 }
 
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
+.ui-menu-color-interests {
+    background-color: #e74c3c;
 }
 
-.section-heading {
-    font-family: "Exo", sans-serif;
+
+
+
+body {
+    font-family: Roboto, sans-serif;
     font-weight: 300;
-    margin-top: 25px;
-    margin-bottom: 40px;
-    color: rgb(0, 0, 0);
+    background-color: #525252;
+    color: #555555;
 }
 
-/* ----------------------------------------Special paddings/margins/text */
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
 
 h1,
 h2,
@@ -70,32 +84,28 @@ h4 {
 }
 
 .general-sub {
-    font-family: "Permanent-marker", permanent-marker;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
-    color: #ffffff;
+    color: #fafafa;
 }
 
 .inline-block {
     display: inline-block;
 }
 
+
 .row-table {
     display: table;
 }
 
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
-}
-
 .history-heading,
 .section-heading {
-    font-family: "Acme", acme;
+    font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 40px;
 }
+
 
 /*--------------------------------------------Heading*/
 
@@ -108,7 +118,7 @@ header {
 }
 
 .logo {
-    background: url("../images/merkmedia1.jpg");
+    background: url("../images/rosie.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -119,37 +129,28 @@ header {
 }
 
 .name {
-    font-family: "Righteous", righteous;
+    font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #fff;
+    color: #ffffff;
 }
 
 .title {
-    font-family: "Permanent-marker", permanent-marker;
+    font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #fff;
-}
-
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
-}
-
-#nav li {
-    font-size: 14px;
-    padding: 0;
+    color: #ffffff;
 }
 
 #nav {
     margin: 0;
+}
+
+#nav li {
+    padding: 0;
 }
 
 .menuitem {
@@ -161,9 +162,10 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: #fff;
+    color: #ffffff;
     height: 120px;
 }
+
 
 .menuitem a i {
     padding-top: 22px;
@@ -183,14 +185,16 @@ header {
     letter-spacing: 2px;
 }
 
+
 /*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
-    background: rgba(255, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* ----------------------------------------Footer */
+
+/*--------------------------------------------Footer*/
 
 footer {
     background-color: #525252;
@@ -199,19 +203,19 @@ footer {
     margin: 0;
 }
 
-.cv-mp4 i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-mp4 i:hover {
-    color: #ff4000;
 }
 
 .social-links {
@@ -239,10 +243,10 @@ footer {
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/* ----------------------------------------Three Reasons */
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
@@ -253,7 +257,7 @@ footer {
     margin-bottom: 15px;
 }
 
-/* ----------------------------------------Personal Info */
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -264,7 +268,6 @@ footer {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -273,6 +276,7 @@ footer {
 }
 
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -284,16 +288,16 @@ footer {
 }
 
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/* ----------------------------------------Skills */
+/*--------------------------------------------Skills*/
 
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -302,20 +306,16 @@ footer {
     font-weight: 400;
     padding: 3px 30px 2px 10px;
     color: #fafafa;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(25, 25, 25, 0.2);
 }
+
 
 .progress-section {
     margin: 40px 20px;
 }
 
-/* ----------------------------------------Past Events and Gallery */
 
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-    font-size: 2.50rem;
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -329,40 +329,41 @@ footer {
     margin: 0;
 }
 
+.timeline-item::before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: .8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item::after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
 .history-items {
     margin-bottom: 30px;
 }
 
-.red-carpet {
-    color: white
-}
-
-.fast-furious {
-    color: white;
-}
-#gallery-photos {
-    clear: both;
-    line-height: 0;
-    column-count: 2;
-    column-gap: 0px
-}
-
-#gallery-photos-2 {
-    clear: both;
-    line-height: 0;
-    column-count: 2;
-    column-gap: 0px;
-}
-
-#gallery-photos img {
-    width: 100%;
-}
-
-#gallery-photos-2 img {
-    width: 100%;
-}
-
-/* ----------------------------------------Contact Form */
+/*--------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
@@ -370,6 +371,7 @@ footer {
     margin-top: 25px;
     margin-bottom: 20px;
 }
+
 
 .center-form {
     padding-top: 10px;
@@ -380,8 +382,8 @@ footer {
 button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
-    color: #fafafa;
     background-color: #e84610;
+    color: #fafafa;
 }
 
 /*--------------------------------------------Map*/
