--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 .bg-color-personal-info {
-    background-color: #f4f4f4;
+    background-color: #676767;
 }
 
 .bg-color-skills {
@@ -66,7 +66,7 @@ body {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     background-color: #525252;
-    color: #555555;
+    color: #000000;
 }
 
 
@@ -170,7 +170,7 @@ header {
 .menuitem a i {
     padding-top: 22px;
     display: block;
-    color: #fafafa;
+    color: #ff0000;
     font-size: 26px;
 }
 
@@ -198,20 +198,20 @@ header {
 
 footer {
     background-color: #525252;
-    color: #fafafa;
+    color: #ffffff;
     min-height: 120px;
     margin: 0;
 }
 
-footer .cv-pdf i {
+footer .cv-mp4 i {
     color: #fafafa;
     text-align: center;
     font-size: 18px;
     padding-left: 5px;
 }
 
-footer .cv-pdf i:hover {
-    color: #e84610;
+footer .cv-mp4 i:hover {
+    color: #fa4306;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
