--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 }
 
 .bg-color-personal-info {
-    background-color: #676767;
+    background-color: #cccccc;
 }
 
 .bg-color-skills {
@@ -210,7 +210,7 @@ footer .cv-mp4 i {
     padding-left: 5px;
 }
 
-footer .cv-mp4 i:hover {
+footer .videos-mp4 i:hover {
     color: #fa4306;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
@@ -248,13 +248,20 @@ footer .cv-mp4 i:hover {
 
 /*--------------------------------------------Three Reasons*/
 
-.three-reasons-icon {
+.three-reasons-icons {
     font-size: 26px;
-    color: #e67e22;
+    color: #ff7700;
 }
 
 .three-reasons-heading {
     margin-bottom: 15px;
+    color: #000000;
+    font-weight: bold;
+}
+
+.skills {
+    color: #f34747;
+    font-weight: bold;
 }
 
 /*--------------------------------------------Personal Info*/
@@ -268,6 +275,8 @@ footer .cv-mp4 i:hover {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
+    color: #000000;
+    font-weight: bold;
 }
 
 .personal-info-item .key p,
