--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ footer .videos-mp4 i:hover {
 
 .contact-heading {
     font-family: "Exo", sans-serif;
-    font-weight: 300;
+    font-weight: bold;
     margin-top: 25px;
     margin-bottom: 20px;
 }
@@ -361,6 +361,8 @@ footer .videos-mp4 i:hover {
     padding-top: 10px;
     margin: 0 auto;
     max-width: 70%;
+    color: black;
+    font-weight: bold;
 }
 
 button[type="submit"] {
